WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132529
Invalidate scrollbars when custom scrollbar style changes dynamically.
https://bugs.webkit.org/show_bug.cgi?id=132529
Summary
Invalidate scrollbars when custom scrollbar style changes dynamically.
Andreas Kling
Reported
2014-05-03 13:00:50 PDT
We currently don't invalidate scrollbars when e.g a -webkit-scrollbar property is changed.
Attachments
Patch
(4.50 KB, patch)
2014-05-03 13:01 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-05-03 13:01:58 PDT
Created
attachment 230760
[details]
Patch
WebKit Commit Bot
Comment 2
2014-05-03 15:17:22 PDT
Comment on
attachment 230760
[details]
Patch Clearing flags on attachment: 230760 Committed
r168230
: <
http://trac.webkit.org/changeset/168230
>
WebKit Commit Bot
Comment 3
2014-05-03 15:17:26 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 4
2014-05-03 15:37:33 PDT
Comment on
attachment 230760
[details]
Patch Does this work for custom overflow:scroll scrollbars?
Andreas Kling
Comment 5
2014-05-03 15:49:48 PDT
(In reply to
comment #4
)
> (From update of
attachment 230760
[details]
) > Does this work for custom overflow:scroll scrollbars?
Yeah, the layout test uses overflow:scroll on a div to test that as well.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug