Invalidate scrollbars when custom scrollbar style changes dynamically. <https://webkit.org/b/132529>

Source/WebCore:
Add a ScrollView::styleDidChange() and call that from RenderView::styleDidChange()
so that the scrollbars are sure to get repainted with potentially different style.

Reviewed by Antti Koivisto.

Test: fast/css/scrollbar-dynamic-style-change.html

* platform/ScrollView.cpp:
(WebCore::ScrollView::styleDidChange):
* platform/ScrollView.h:
* rendering/RenderView.cpp:
(WebCore::RenderView::styleDidChange):

LayoutTests:
Reviewed by Antti Koivisto.

* fast/css/scrollbar-dynamic-style-change-expected.html: Added.
* fast/css/scrollbar-dynamic-style-change.html: Added.


Canonical link: https://commits.webkit.org/150554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168230 268f45cc-cd09-0410-ab3c-d52691b4dbfc